--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
   },
   "homepage": "https://github.com/lee-tae-eon/movieql#readme",
   "dependencies": {
+    "axios": "^0.21.1",
+    "babel-polyfill": "^6.26.0",
     "graphql-yoga": "^1.18.3",
     "node-fetch": "^2.6.1"
   },
@@ -30,5 +32,8 @@
     "@babel/node": "^7.14.9",
     "@babel/preset-env": "^7.15.0",
     "nodemon": "^2.0.12"
+  },
+  "now": {
+    "alias": "movieql"
   }
 }
